--- a/Archive/V11/styles/styles.scss
+++ b/Archive/V11/styles/styles.scss
@@ -766,14 +766,22 @@ a:hover {
 	padding: 4rem 0;
 }
 
+.story-img-container.king-app-video {
+	background-color: $grayscale-1000;
+}
+
 .story-img {
 	padding-left: 2rem;
 	width: 99%;
 	max-width: 967px;
 }
 
-.switch-app-video video {
+.king-app-video video, .switch-app-video video {
 	max-width: 400px;
+}
+
+.king-app-video video {
+	margin-left: 2rem;
 }
 
 .story-caption {
