--- a/styles/styles.css
+++ b/styles/styles.css
@@ -545,7 +545,7 @@ a .fas, a .fas:visited {
   padding: 2rem;
   border-radius: 10px;
   margin: 3rem 0;
-  max-width: 100%; }
+  max-width: 375px; }
 
 .project-video.ninty {
   background-color: #68BCF5; }
