--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -603,7 +603,7 @@ a .fas, a .fas:visited {
 	padding: 2rem;
 	border-radius: 10px;
 	margin: 3rem 0;
-	max-width: 100%;
+	max-width: 375px;
 }
 
 .project-video.ninty {
