--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,12 +183,12 @@ a .fas, a .fas:visited {
   top: 0;
   left: 0;
   width: 100%;
-  height: 150%;
+  height: 3000px;
   border: 1px solid red;
   z-index: 0;
   background-image: url(../images/controller-icons.png);
-  background-size: 150px;
-  opacity: 0.035;
+  background-size: 175px;
+  opacity: 0.03;
   animation-name: controller-icons;
   animation-duration: 40s;
   animation-iteration-count: infinite;
