--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -613,7 +613,16 @@ a .fas, a .fas:visited {
 
 .project-overview-image {
 	margin: 3rem auto;
-	max-width: 1237px;
+	max-width: 1240px;
+}
+
+.project-overview-caption {
+	font-size: 0.688rem;
+	font-weight: 600;
+	text-align: center;
+	border-bottom: 1px dotted $grayscale-400;
+	color: $grayscale-700;
+	margin: 0;
 }
 
 .about-photo {
@@ -632,6 +641,18 @@ a .fas, a .fas:visited {
 
 .project-video.ninty {
 	background-color: #68BCF5;
+}
+
+.project-overview-video {
+	margin: 3rem auto;
+	max-width: 1240px;
+}
+
+.project-overview-video .project-video {
+	padding: 0.5rem;
+	border-radius: 0;
+	margin: 0;
+	max-width: 100%;
 }
 
 /* End Website/Product Specific Styles */
