--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,99 +208,95 @@ a .fas, a .fas:visited {
   transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
-  z-index: 9990; }
+  justify-content: center;
+  z-index: 9990;
+  width: 100%; }
 
 .dave-face {
-  width: 82px;
-  margin-right: 10px;
+  width: 128px;
+  margin-right: 1rem;
   animation-name: dave-face;
-  animation-duration: 4s; }
+  animation-duration: 6s; }
 
 @keyframes dave-face {
   0% {
-    width: 128px;
     transform: translate(-300px, 0);
     opacity: 0; }
-  25% {
-    width: 128px;
+  20% {
+    transform: translate(-300px, 0);
+    opacity: 0; }
+  40% {
+    transform: translate(-300px, 0);
+    opacity: 0; }
+  60% {
     transform: translate(0, 0);
     opacity: 1; }
-  50% {
-    width: 128px;
+  80% {
     transform: translate(0, 0);
     opacity: 1; }
   100% {
-    width: 82px;
     transform: translate(0, 0);
     opacity: 1; } }
 
 .header-name {
-  font-size: 2.375rem;
-  line-height: 2.375rem;
+  font-size: 3.75rem;
+  line-height: 3.75rem;
   font-family: "Big Shoulders Inline Display", cursive;
   font-weight: 900;
   color: #FFFFFF;
   margin-bottom: 4px;
   animation-name: header-name;
-  animation-duration: 4s; }
+  animation-duration: 5s; }
 
 @keyframes header-name {
   0% {
-    font-size: 3.75rem;
-    line-height: 3.75rem;
     transform: translate(0, -300px);
     opacity: 0; }
-  25% {
-    font-size: 3.75rem;
-    line-height: 3.75rem;
+  20% {
+    transform: translate(0, -300px);
+    opacity: 0; }
+  40% {
     transform: translate(0, 0);
     opacity: 1; }
-  50% {
-    font-size: 3.75rem;
-    line-height: 3.75rem;
+  60% {
+    transform: translate(0, 0);
+    opacity: 1; }
+  80% {
     transform: translate(0, 0);
     opacity: 1; }
   100% {
-    font-size: 2.375rem;
-    line-height: 2.375rem;
     transform: translate(0, 0);
     opacity: 1; } }
 
 .header-title {
-  font-size: 0.938rem;
-  line-height: 0.938rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
   font-family: "Big Shoulders Inline Display", cursive;
   font-weight: 600;
   color: #FFFFFF;
   text-transform: uppercase;
-  letter-spacing: 5.8px;
+  letter-spacing: 9px;
   animation-name: header-title;
-  animation-duration: 4s;
+  animation-duration: 5s;
   margin: 0; }
 
 @keyframes header-title {
   0% {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-    letter-spacing: 9px;
     transform: translate(0, 300px);
     opacity: 0; }
-  25% {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-    letter-spacing: 9px;
+  20% {
+    transform: translate(0, 300px);
+    opacity: 0; }
+  40% {
     transform: translate(0, 0);
     opacity: 1; }
-  50% {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-    letter-spacing: 9px;
+  60% {
+    transform: translate(0, 0);
+    opacity: 1; }
+  80% {
     transform: translate(0, 0);
     opacity: 1; }
   100% {
-    font-size: 0.938rem;
-    line-height: 0.938;
-    letter-spacing: 5.8px;
     transform: translate(0, 0);
     opacity: 1; } }
 
@@ -313,10 +309,22 @@ a .fas, a .fas:visited {
 
 @keyframes header-nav {
   0% {
+    transform: translate(300px, 0);
     opacity: 0; }
-  50% {
+  20% {
+    transform: translate(300px, 0);
     opacity: 0; }
+  40% {
+    transform: translate(300px, 0);
+    opacity: 0; }
+  60% {
+    transform: translate(0, 0);
+    opacity: 1; }
+  80% {
+    transform: translate(0, 0);
+    opacity: 1; }
   100% {
+    transform: translate(0, 0);
     opacity: 1; } }
 
 .header-nav::before {
@@ -337,7 +345,7 @@ a .fas, a .fas:visited {
   font-weight: 600;
   letter-spacing: 1px;
   text-transform: lowercase;
-  line-height: 1.75rem;
+  line-height: 2.125rem;
   font-size: 1rem; }
 
 .header-nav a:hover {
@@ -382,7 +390,7 @@ a .fas, a .fas:visited {
 @keyframes gif-one {
   0% {
     opacity: 0; }
-  65% {
+  64% {
     opacity: 0; }
   100% {
     opacity: 1; } }
@@ -406,7 +414,7 @@ a .fas, a .fas:visited {
 @keyframes gif-three {
   0% {
     opacity: 0; }
-  75% {
+  76% {
     opacity: 0; }
   100% {
     opacity: 1; } }
@@ -418,7 +426,7 @@ a .fas, a .fas:visited {
 @keyframes gif-four {
   0% {
     opacity: 0; }
-  80% {
+  82% {
     opacity: 0; }
   100% {
     opacity: 1; } }
@@ -430,7 +438,7 @@ a .fas, a .fas:visited {
 @keyframes gif-five {
   0% {
     opacity: 0; }
-  85% {
+  88% {
     opacity: 0; }
   100% {
     opacity: 1; } }
@@ -442,7 +450,7 @@ a .fas, a .fas:visited {
 @keyframes gif-six {
   0% {
     opacity: 0; }
-  90% {
+  94% {
     opacity: 0; }
   100% {
     opacity: 1; } }
@@ -615,67 +623,75 @@ a .fas, a .fas:visited {
     transform: translate(0, 0);
     justify-content: center;
     padding: 2rem 0; }
+  .dave-face {
+    width: 82px;
+    margin-right: 10px; }
+  .header-name {
+    font-size: 2.375rem;
+    line-height: 2.375rem; }
+  .header-title {
+    font-size: 0.938rem;
+    line-height: 0.938rem;
+    letter-spacing: 5.8px; }
+  .header-nav a, .header-nav a:visited {
+    line-height: 1.5rem;
+    font-size: 0.875rem;
+    color: #FFFFFF; }
   @keyframes dave-face {
     0% {
-      width: 82px;
       transform: translate(0, 0);
       opacity: 1; }
-    25% {
-      width: 82px;
+    20% {
       transform: translate(0, 0);
       opacity: 1; }
-    50% {
-      width: 82px;
+    40% {
+      transform: translate(0, 0);
+      opacity: 1; }
+    60% {
+      transform: translate(0, 0);
+      opacity: 1; }
+    80% {
       transform: translate(0, 0);
       opacity: 1; }
     100% {
-      width: 82px;
       transform: translate(0, 0);
       opacity: 1; } }
   @keyframes header-name {
     0% {
-      font-size: 2.375rem;
-      line-height: 2.375rem;
       transform: translate(0, 0);
       opacity: 1; }
-    25% {
-      font-size: 2.375rem;
-      line-height: 2.375rem;
+    20% {
       transform: translate(0, 0);
       opacity: 1; }
-    50% {
-      font-size: 2.375rem;
-      line-height: 2.375rem;
+    40% {
+      transform: translate(0, 0);
+      opacity: 1; }
+    60% {
+      transform: translate(0, 0);
+      opacity: 1; }
+    80% {
       transform: translate(0, 0);
       opacity: 1; }
     100% {
-      font-size: 2.375rem;
-      line-height: 2.375rem;
       transform: translate(0, 0);
       opacity: 1; } }
   @keyframes header-title {
     0% {
-      font-size: 0.938rem;
-      line-height: 0.938;
-      letter-spacing: 5.8px;
       transform: translate(0, 0);
       opacity: 1; }
-    25% {
-      font-size: 0.938rem;
-      line-height: 0.938;
-      letter-spacing: 5.8px;
+    20% {
       transform: translate(0, 0);
       opacity: 1; }
-    50% {
-      font-size: 0.938rem;
-      line-height: 0.938;
-      letter-spacing: 5.8px;
+    40% {
+      transform: translate(0, 0);
+      opacity: 1; }
+    60% {
+      transform: translate(0, 0);
+      opacity: 1; }
+    80% {
       transform: translate(0, 0);
       opacity: 1; }
     100% {
-      font-size: 0.938rem;
-      line-height: 0.938;
-      letter-spacing: 5.8px;
       transform: translate(0, 0);
       opacity: 1; } }
   @keyframes header-nav {
