--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -277,8 +277,8 @@ a .fas, a .fas:visited {
 }
 
 @keyframes controller-icons {
-  0%   {transform: translate(0,-500px);}
-  100%  {transform: translate(0,0);}
+	0%   {transform: translate(0,-500px);}
+	100%  {transform: translate(0,0);}
 }
 
 .header {
@@ -288,59 +288,67 @@ a .fas, a .fas:visited {
 	transform: translate(-50%,-50%);
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	z-index: 9990;
+	width: 100%;
 }
 
 .dave-face {
-	width: 82px;
-	margin-right: 10px;
+	width: 128px;
+	margin-right: 1rem;
 	animation-name: dave-face;
-	animation-duration: 4s;
+	animation-duration: 6s;
 }
 
 @keyframes dave-face {
-  0%   {width: 128px; transform: translate(-300px,0); opacity: 0;}
-  25%  {width: 128px; transform: translate(0,0); opacity: 1;}
-  50%  {width: 128px; transform: translate(0,0); opacity: 1;}
-  100%  {width: 82px; transform: translate(0,0); opacity: 1;}
+	0%   {transform: translate(-300px,0); opacity: 0;}
+	20%  {transform: translate(-300px,0); opacity: 0;}
+	40%  {transform: translate(-300px,0); opacity: 0;}
+	60%  {transform: translate(0,0); opacity: 1;}
+	80%  {transform: translate(0,0); opacity: 1;}
+	100%  {transform: translate(0,0); opacity: 1;}
 }
 
 .header-name {
-	font-size: 2.375rem;
-	line-height: 2.375rem;
+	font-size: 3.75rem;
+	line-height: 3.75rem;
 	font-family: $title-font;
 	font-weight: 900;
 	color: $grayscale-0;
 	margin-bottom: 4px;
 	animation-name: header-name;
-	animation-duration: 4s;
+	animation-duration: 5s;
 }
 
 @keyframes header-name {
-  0%   {font-size: 3.75rem; line-height: 3.75rem; transform: translate(0,-300px); opacity: 0;}
-  25%  {font-size: 3.75rem; line-height: 3.75rem; transform: translate(0,0); opacity: 1;}
-  50%  {font-size: 3.75rem; line-height: 3.75rem; transform: translate(0,0); opacity: 1;}
-  100%  {font-size: 2.375rem; line-height: 2.375rem; transform: translate(0,0); opacity: 1;}
+	0%   {transform: translate(0,-300px); opacity: 0;}
+	20%   {transform: translate(0,-300px); opacity: 0;}
+	40%  {transform: translate(0,0); opacity: 1;}
+	60%  {transform: translate(0,0); opacity: 1;}
+	80%  {transform: translate(0,0); opacity: 1;}
+	100%  {transform: translate(0,0); opacity: 1;}
 }
 
 .header-title {
-	font-size: 0.938rem;
-	line-height: 0.938rem;
+	font-size: 1.5rem;
+	line-height: 1.5rem;
 	font-family: $title-font;
 	font-weight: 600;
 	color: $grayscale-0;
 	text-transform: uppercase;
-	letter-spacing: 5.8px;
+	letter-spacing: 9px;
 	animation-name: header-title;
-	animation-duration: 4s;
+	animation-duration: 5s;
 	margin: 0;
 }
 
 @keyframes header-title {
-  0%   {font-size: 1.5rem; line-height: 1.5rem; letter-spacing: 9px; transform: translate(0,300px); opacity: 0;}
-  25%  {font-size: 1.5rem; line-height: 1.5rem; letter-spacing: 9px; transform: translate(0,0); opacity: 1;}
-  50%  {font-size: 1.5rem; line-height: 1.5rem; letter-spacing: 9px; transform: translate(0,0); opacity: 1;}
-  100%  {font-size: 0.938rem; line-height: 0.938; letter-spacing: 5.8px; transform: translate(0,0); opacity: 1;}
+	0%   {transform: translate(0,300px); opacity: 0;}
+	20%   {transform: translate(0,300px); opacity: 0;}
+	40%  {transform: translate(0,0); opacity: 1;}
+	60%  {transform: translate(0,0); opacity: 1;}
+	80%  {transform: translate(0,0); opacity: 1;}
+	100%  {transform: translate(0,0); opacity: 1;}
 }
 
 .header-nav {
@@ -352,9 +360,12 @@ a .fas, a .fas:visited {
 }
 
 @keyframes header-nav {
-  0%   {opacity: 0;}
-  50%   {opacity: 0;}
-  100%  {opacity: 1;}
+	0%   {transform: translate(300px,0); opacity: 0;}
+	20%  {transform: translate(300px,0); opacity: 0;}
+	40%  {transform: translate(300px,0); opacity: 0;}
+	60%  {transform: translate(0,0); opacity: 1;}
+	80%  {transform: translate(0,0); opacity: 1;}
+	100%  {transform: translate(0,0); opacity: 1;}
 }
 
 .header-nav::before {
@@ -376,7 +387,7 @@ a .fas, a .fas:visited {
 	font-weight: 600;
 	letter-spacing: 1px;
 	text-transform: lowercase;
-	line-height: 1.75rem;
+	line-height: 2.125rem;
 	font-size: 1rem;
 }
 
@@ -429,7 +440,7 @@ a .fas, a .fas:visited {
 
 @keyframes gif-one {
   0%   {opacity: 0;}
-  65%   {opacity: 0;}
+  64%   {opacity: 0;}
   100%  {opacity: 1;}
 }
 
@@ -451,7 +462,7 @@ a .fas, a .fas:visited {
 
 @keyframes gif-three {
   0%   {opacity: 0;}
-  75%   {opacity: 0;}
+  76%   {opacity: 0;}
   100%  {opacity: 1;}
 }
 
@@ -462,7 +473,7 @@ a .fas, a .fas:visited {
 
 @keyframes gif-four {
   0%   {opacity: 0;}
-  80%   {opacity: 0;}
+  82%   {opacity: 0;}
   100%  {opacity: 1;}
 }
 
@@ -473,7 +484,7 @@ a .fas, a .fas:visited {
 
 @keyframes gif-five {
   0%   {opacity: 0;}
-  85%   {opacity: 0;}
+  88%   {opacity: 0;}
   100%  {opacity: 1;}
 }
 
@@ -484,7 +495,7 @@ a .fas, a .fas:visited {
 
 @keyframes gif-six {
   0%   {opacity: 0;}
-  90%   {opacity: 0;}
+  94%   {opacity: 0;}
   100%  {opacity: 1;}
 }
 
@@ -695,25 +706,53 @@ a .fas, a .fas:visited {
 		padding: 2rem 0;
 	}
 
+	.dave-face {
+		width: 82px;
+		margin-right: 10px;
+	}
+
+	.header-name {
+		font-size: 2.375rem;
+		line-height: 2.375rem;
+	}
+
+	.header-title {
+		font-size: 0.938rem;
+		line-height: 0.938rem;
+		letter-spacing: 5.8px;
+	}
+
+	.header-nav a, .header-nav a:visited {
+		line-height: 1.5rem;
+		font-size: 0.875rem;
+		color: $grayscale-0;
+	}
+
 	@keyframes dave-face {
-		0%   {width: 82px; transform: translate(0,0); opacity: 1;}
-		25%  {width: 82px; transform: translate(0,0); opacity: 1;}
-		50%  {width: 82px; transform: translate(0,0); opacity: 1;}
-		100%  {width: 82px; transform: translate(0,0); opacity: 1;}
+		0%   {transform: translate(0,0); opacity: 1;}
+		20%  {transform: translate(0,0); opacity: 1;}
+		40%  {transform: translate(0,0); opacity: 1;}
+		60%  {transform: translate(0,0); opacity: 1;}
+		80%  {transform: translate(0,0); opacity: 1;}
+		100%  {transform: translate(0,0); opacity: 1;}
 	}
 
 	@keyframes header-name {
-		0%   {font-size: 2.375rem; line-height: 2.375rem; transform: translate(0,0); opacity: 1;}
-		25%  {font-size: 2.375rem; line-height: 2.375rem; transform: translate(0,0); opacity: 1;}
-		50%  {font-size: 2.375rem; line-height: 2.375rem; transform: translate(0,0); opacity: 1;}
-		100%  {font-size: 2.375rem; line-height: 2.375rem; transform: translate(0,0); opacity: 1;}
+		0%   {transform: translate(0,0); opacity: 1;}
+		20%  {transform: translate(0,0); opacity: 1;}
+		40%  {transform: translate(0,0); opacity: 1;}
+		60%  {transform: translate(0,0); opacity: 1;}
+		80%  {transform: translate(0,0); opacity: 1;}
+		100%  {transform: translate(0,0); opacity: 1;}
 	}
 
 	@keyframes header-title {
-		0%   {font-size: 0.938rem; line-height: 0.938; letter-spacing: 5.8px; transform: translate(0,0); opacity: 1;}
-		25%  {font-size: 0.938rem; line-height: 0.938; letter-spacing: 5.8px; transform: translate(0,0); opacity: 1;}
-		50%  {font-size: 0.938rem; line-height: 0.938; letter-spacing: 5.8px; transform: translate(0,0); opacity: 1;}
-		100%  {font-size: 0.938rem; line-height: 0.938; letter-spacing: 5.8px; transform: translate(0,0); opacity: 1;}
+		0%   {transform: translate(0,0); opacity: 1;}
+		20%  {transform: translate(0,0); opacity: 1;}
+		40%  {transform: translate(0,0); opacity: 1;}
+		60%  {transform: translate(0,0); opacity: 1;}
+		80%  {transform: translate(0,0); opacity: 1;}
+		100%  {transform: translate(0,0); opacity: 1;}
 	}
 
 	@keyframes header-nav {
