--- a/styles/styles.css
+++ b/styles/styles.css
@@ -567,6 +567,32 @@ a .fas, a .fas:visited {
   margin: 3rem auto;
   max-width: 1240px; }
 
+.about-photo {
+  width: 250px;
+  border-radius: 50%;
+  margin-bottom: 2rem; }
+
+.project-overview-video {
+  margin: 3rem auto;
+  padding: 1rem;
+  max-width: 1240px;
+  background-color: #000000;
+  border-radius: 10px; }
+
+.project-overview-video .desktop {
+  padding: 0.5rem;
+  border-radius: 0;
+  margin: 0;
+  max-width: 100%; }
+
+.project-overview-video .mobile {
+  max-width: 375px;
+  margin-left: 50%;
+  transform: translate(-50%, 0); }
+
+.project-overview-video.ninty {
+  background-color: #68BCF5; }
+
 .project-overview-caption {
   font-size: 0.688rem;
   font-weight: 600;
@@ -575,30 +601,9 @@ a .fas, a .fas:visited {
   color: #757575;
   margin: 0; }
 
-.about-photo {
-  width: 250px;
-  border-radius: 50%;
-  margin-bottom: 2rem; }
-
-.project-video {
-  background-color: #000000;
-  padding: 2rem;
-  border-radius: 10px;
-  margin: 3rem 0;
-  max-width: 375px; }
-
-.project-video.ninty {
-  background-color: #68BCF5; }
-
-.project-overview-video {
-  margin: 3rem auto;
-  max-width: 1240px; }
-
-.project-overview-video .project-video {
-  padding: 0.5rem;
-  border-radius: 0;
-  margin: 0;
-  max-width: 100%; }
+.project-overview-video .project-overview-caption {
+  border: 0;
+  color: #FFFFFF; }
 
 /* End Website/Product Specific Styles */
 /*---------------------------------------------------------------------*/
