--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -293,6 +293,51 @@ a .fas, a .fas:visited {
 	width: 100%;
 }
 
+.header-dave {
+	position: relative;
+}
+
+.header-dave:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 1px;
+	height: 1500px;
+	background-color: rgba($grayscale-0, 0.4);
+	transform: translate(65px,-2500px);
+	z-index: 9992;
+	animation-name: hat-line;
+	animation-duration: 10s;
+	display: none;
+}
+
+@keyframes hat-line {
+	0%   {transform: translate(65px,-2500px);}
+	20%  {transform: translate(65px,-2500px);}
+	40%  {transform: translate(65px,-2500px);}
+	60%  {transform: translate(65px,-2500px);}
+	85%  {transform: translate(65px,-1540px);}
+	100%  {transform: translate(65px,-2500px);}
+}
+
+.santa-hat {
+	position: absolute;
+	transform: translate(-4px,-45px);
+	animation-name: santa-hat;
+	animation-duration: 10s;
+	z-index: 9991;
+	display: none;
+}
+
+@keyframes santa-hat {
+	0%   {transform: translate(-4px,-1000px);}
+	20%  {transform: translate(-4px,-1000px);}
+	40%  {transform: translate(-4px,-1000px);}
+	60%  {transform: translate(-4px,-1000px);}
+	85%  {transform: translate(-4px,-45px);}
+}
+
 .dave-face {
 	width: 128px;
 	margin-right: 1rem;
