--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -232,6 +232,24 @@ a .fas, a .fas:visited {
 	vertical-align: -2px;
 }
 
+::-webkit-scrollbar {
+	width: 16px;
+}
+
+::-webkit-scrollbar-track {
+	background: $grayscale-400;
+	border-radius: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: $grayscale-500;
+	border-radius: 16px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: $grayscale-700;
+}
+
 /* End Reset/Base Styles */
 
 
