--- a/styles/styles.css
+++ b/styles/styles.css
@@ -762,6 +762,8 @@ a .fas, a .fas:visited {
 
 /* md */
 @media (max-width: 980px) {
+  ::-webkit-scrollbar {
+    display: none; }
   .wrapper {
     height: auto; }
   .header {
