--- a/styles/styles.css
+++ b/styles/styles.css
@@ -763,7 +763,7 @@ a .fas, a .fas:visited {
 /* md */
 @media (max-width: 980px) {
   ::-webkit-scrollbar {
-    display: none; }
+    all: unset; }
   .wrapper {
     height: auto; }
   .header {
