--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -846,7 +846,7 @@ a .fas, a .fas:visited {
 @media (max-width: 980px) {
 
 	::-webkit-scrollbar {
-		display: none;
+		all: unset;
 	}
 
 	.wrapper {
