--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -179,6 +179,9 @@ ul, ol {
 
 ul li {
 	list-style-type: disc;
+	font-size: .75rem;
+	line-height: 1.125rem;
+	margin: 0.375rem 0;
 }
 
 ol li {
@@ -187,8 +190,10 @@ ol li {
 
 hr {
 	border: 0;
-    border-bottom: 5px solid $grayscale-600;
+    border-bottom: 4px solid $grayscale-1000;
+    width: 50px;
     background: none;
+    margin: 1.875rem 0 2.125rem;
 }
 
 blockquote {
@@ -208,6 +213,9 @@ cite {
 
 small {
 	font-size: .813rem;
+	line-height: 1.375rem;
+	display: block;
+	margin: 0.5rem 0;
 }
 
 a, a:visited {
@@ -230,6 +238,12 @@ a .fas, a .fas:visited {
 	font-size: 1.25rem;
 	margin-left: .5rem;
 	vertical-align: -2px;
+}
+
+a .fas.icon-sm, a .fas.icon-sm:visited {
+	font-size: 1rem;
+	margin-left: .25rem;
+	vertical-align: 1px;
 }
 
 ::-webkit-scrollbar {
@@ -693,6 +707,14 @@ a .fas, a .fas:visited {
 	text-transform: uppercase;
 	color: $grayscale-500;
 	letter-spacing: 2px;
+}
+
+.project-overview-date {
+	text-transform: uppercase;
+	font-size: 0.688rem;
+	letter-spacing: 1px;
+	color: $grayscale-700;
+	font-weight: 600;
 }
 
 .project-overview-intro::after, .project-overview-intro::before {
