--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,7 +90,7 @@ img {
 /*- 2c. Text -*/
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 1rem;
-  font-family: "Shrikhand", serif;
+  font-family: "Bebas Neue", sans-serif;
   color: #616161; }
 
 h1 {
@@ -205,16 +205,17 @@ a:hover {
   height: 50px; }
 
 .logo-name, .logo-title {
-  font-size: 1.875rem;
+  font-size: 2rem;
+  letter-spacing: 2px;
   color: #FFFFFF;
   margin: 0.25rem 0 0.125rem; }
 
 .logo-title {
-  font-size: 0.813rem;
+  font-size: 0.75rem;
   font-family: "Spartan", sans-serif;
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 2.5px;
+  letter-spacing: 0.5px;
   margin: 0; }
 
 .sidebar-summary {
@@ -241,9 +242,9 @@ a:hover {
   flex-direction: column; }
 
 .sidebar-nav_item, .sidebar-nav_item:visited {
-  font-family: "Shrikhand", serif;
+  font-family: "Bebas Neue", sans-serif;
   font-size: 1.5rem;
-  padding: 0.688rem 1.25rem;
+  padding: 0.688rem 1.25rem 0.5rem;
   margin: 0 0 0.875rem;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
@@ -600,12 +601,6 @@ a:hover {
   .mobile-header {
     width: 100%;
     margin-bottom: 1rem; }
-  .logo-name {
-    font-size: 1.5rem;
-    margin: 0.5rem 0 0.125rem; }
-  .logo-title {
-    margin: 0;
-    letter-spacing: 0.3px; }
   .projects {
     padding: 1rem; }
   .project-summary {
