--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -54,7 +54,7 @@ $grayscale-1000: #000000;
 
 /*- 1b. Fonts -*/
 
-$header-font: 'Shrikhand', serif;
+$header-font: 'Bebas Neue', sans-serif;
 $copy-font: 'Spartan', sans-serif;
 
 /* End SASS Variables */
@@ -286,17 +286,18 @@ a:hover {
 }
 
 .logo-name, .logo-title {
-	font-size: 1.875rem;
+	font-size: 2rem;
+	letter-spacing: 2px;
 	color: $grayscale-0;
 	margin: 0.25rem 0 0.125rem;
 }
 
 .logo-title {
-	font-size: 0.813rem;
+	font-size: 0.75rem;
 	font-family: $copy-font;
 	font-weight: 500;
 	text-transform: uppercase;
-	letter-spacing: 2.5px;
+	letter-spacing: 0.5px;
 	margin: 0;
 }
 
@@ -330,7 +331,7 @@ a:hover {
 .sidebar-nav_item, .sidebar-nav_item:visited {
 	font-family: $header-font;
 	font-size: 1.5rem;
-	padding: 0.688rem 1.25rem;
+	padding: 0.688rem 1.25rem 0.5rem;
 	margin: 0 0 0.875rem;
 	text-decoration: none;
 	color: rgba($grayscale-0,0.6);
@@ -776,16 +777,6 @@ a:hover {
 	.mobile-header {
 		width: 100%;
 		margin-bottom: 1rem;
-	}
-
-	.logo-name {
-		font-size: 1.5rem;
-		margin: 0.5rem 0 0.125rem;
-	}
-
-	.logo-title {
-		margin: 0;
-		letter-spacing: 0.3px;
 	}
 
 	.projects {
