--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,9 +327,10 @@ a:hover {
   color: #757575;
   text-transform: uppercase;
   font-weight: 900;
-  font-size: 0.688rem;
+  font-size: 0.938rem;
+  font-family: "Bebas Neue", sans-serif;
   line-height: 1rem;
-  letter-spacing: 1px;
+  letter-spacing: 2.5px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -365,16 +366,16 @@ a:hover {
   color: #FFFFFF; }
 
 .project-summary-link, .project-summary-link:visited {
-  font-family: "Spartan", sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 0.688rem;
-  font-weight: 900;
-  letter-spacing: 1.5px;
-  padding: 1rem 1rem 0.75rem;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  padding: 1rem 1.5rem 0.875rem;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 30px;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  display: inline-block; }
 
 .project-summary-link:hover {
   background-color: #02A6FE;
@@ -437,6 +438,9 @@ a:hover {
   width: 600px;
   margin: auto;
   position: relative; }
+
+.project-details-content h2 {
+  font-size: 4rem; }
 
 .project-details-image, .project-details-video {
   margin: 3rem auto;
@@ -592,8 +596,8 @@ a:hover {
     color: #FFFFFF; }
   .project-summary-img {
     filter: grayscale(0); }
-  .resume h2 {
-    font-size: 1.375rem; } }
+  .project-details-content h2 {
+    font-size: 3rem; } }
 
 /* sm */
 /* xs */
@@ -610,10 +614,10 @@ a:hover {
   .project-summary-title {
     font-size: 1.5rem; }
   .project-details-content h2 {
-    font-size: 1.5rem; }
+    font-size: 2.125rem; }
   .project-details-content h3 {
     font-size: 1.25rem; }
   .resume h2 {
-    font-size: 1.25rem; } }
+    font-size: 2rem; } }
 
 /* End Responsive/Media Queries */
