--- a/styles/styles.css
+++ b/styles/styles.css
@@ -206,17 +206,17 @@ a:hover {
   height: 66px; }
 
 .logo-name, .logo-title {
-  font-size: 2.688rem;
+  font-size: 2.5rem;
   letter-spacing: 2px;
   color: #FFFFFF;
-  margin: 0.25rem 0 0; }
+  margin: 0.375rem 0 0; }
 
 .logo-title {
-  font-size: 0.875rem;
+  font-size: 0.813rem;
   font-family: "Spartan", sans-serif;
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 1.6px;
+  letter-spacing: 1.7px;
   margin: 0; }
 
 .sidebar-summary {
@@ -614,7 +614,9 @@ a:hover {
   .logo-title {
     font-size: 0.75rem;
     letter-spacing: 0.5px;
-    margin: 0; } }
+    margin: 0; }
+  .project-summary-tag {
+    letter-spacing: 1px; } }
 
 /* xs */
 @media (max-width: 540px) {
