--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -287,18 +287,18 @@ a:hover {
 }
 
 .logo-name, .logo-title {
-	font-size: 2.688rem;
+	font-size: 2.5rem;
 	letter-spacing: 2px;
 	color: $grayscale-0;
-	margin: 0.25rem 0 0;
+	margin: 0.375rem 0 0;
 }
 
 .logo-title {
-	font-size: 0.875rem;
+	font-size: 0.813rem;
 	font-family: $copy-font;
 	font-weight: 500;
 	text-transform: uppercase;
-	letter-spacing: 1.6px;
+	letter-spacing: 1.7px;
 	margin: 0;
 }
 
@@ -790,6 +790,10 @@ a:hover {
 		font-size: 0.75rem;
 		letter-spacing: 0.5px;
 		margin: 0;
+	}
+
+	.project-summary-tag {
+		letter-spacing: 1px;
 	}
 	
 }
