--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -540,6 +540,7 @@ a:hover {
 	height: 99%;
 	overflow-y: scroll;
 	padding-top: 2rem;
+	border-bottom: 1px solid $grayscale-400;
 }
 
 .project-details-content {
