--- a/IndeedFeatureDesigns/styles/styles.scss
+++ b/IndeedFeatureDesigns/styles/styles.scss
@@ -372,6 +372,10 @@ a:hover {
 	background-color: #FCEBF2;
 }
 
+.lofi {
+	background-color: #FCEEE2;
+}
+
 
 
 /* End Website/Product Specific Styles */
