--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,7 +294,7 @@ a:hover {
   overflow-y: scroll;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 2rem 1rem 1rem 2rem;
   position: relative;
   animation-name: main;
@@ -309,7 +309,7 @@ a:hover {
 .project-summary {
   padding: 2rem;
   border-radius: 2px;
-  width: calc(33% - 1rem);
+  width: calc(33.333% - 1rem);
   margin: 0 1rem 1rem 0;
   background-color: #1a1a1a;
   position: relative;
@@ -322,7 +322,8 @@ a:hover {
 
 .project-summary:hover {
   border: 1px solid rgba(255, 255, 255, 0.2);
-  background-color: #0d0d0d; }
+  background-color: #0d0d0d;
+  transform: translate(-1px, -4px); }
 
 .project-summary-tag {
   color: #757575;
